<resources>
    <string name="app_name">Touristan</string>
    <string name="touristan">touristan</string>
    <string name="empty_list">List is empty</string>
    <string name="google_signin_token">340667296687-2uq7c8ncv5i5tq9tlvp6dg0bahtjteo0.apps.googleusercontent.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_picnic">Picnic</string>
    <string name="title_banks">Bank</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_university">University</string>
    <string name="arg_category">category</string>
    <string name="category_hospital">hospital</string>
    <string name="category_bank">bank</string>
    <string name="category_restaurant">restaurant</string>
    <string name="category_picnic">tourist_attraction</string>
    <string name="category_university">university</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_dummy_tab">DummyTabActivity</string>
    <string name="tab_list">Places</string>
    <string name="tab_locations">Map Locations</string>
    <string name="page_economy">Economy</string>
    <string name="page_standard">Standard</string>
    <string name="page_premium">Premium</string>
</resources>