<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_hospitals">

    <fragment
        android:id="@+id/navigation_hospitals"
        android:name="com.quetta.touristan.ui.home.HomeFragment"
        android:label="@string/title_hospital"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/arg_category"
            app:argType="reference"
            android:defaultValue="@string/category_hospital" />
    </fragment>

    <fragment
        android:id="@+id/navigation_picnic"
        android:name="com.quetta.touristan.ui.home.HomeFragment"
        android:label="@string/title_picnic"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/arg_category"
            app:argType="reference"
            android:defaultValue="@string/category_picnic" />
    </fragment>

    <fragment
        android:id="@+id/navigation_banks"
        android:name="com.quetta.touristan.ui.home.HomeFragment"
        android:label="@string/title_banks"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/arg_category"
            app:argType="reference"
            android:defaultValue="@string/category_bank" />
    </fragment>

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.quetta.touristan.ui.home.HomeFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/arg_category"
            app:argType="reference"
            android:defaultValue="@string/category_restaurant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_university"
        android:name="com.quetta.touristan.ui.home.HomeFragment"
        android:label="@string/title_university"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/arg_category"
            app:argType="reference"
            android:defaultValue="@string/category_university" />
    </fragment>

</navigation>