<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hospitals"
        android:icon="@drawable/ic_hospital"
        android:title="@string/title_hospital" />

    <item
        android:id="@+id/navigation_picnic"
        android:icon="@drawable/ic_tour"
        android:title="@string/title_picnic" />

    <item
        android:id="@+id/navigation_banks"
        android:icon="@drawable/ic_bank"
        android:title="@string/title_banks" />

    <item
        android:id="@+id/navigation_restaurant"
        android:icon="@drawable/ic_bank"
        android:title="@string/title_restaurant" />

    <item
        android:id="@+id/navigation_university"
        android:icon="@drawable/ic_bank"
        android:title="@string/title_university" />

</menu>